changed db name

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ JWT_EXPIRESIN=10h
 # Database
 DB_USER=admin
 DB_PASSWORD=iv7QJ3kC
-DB_DATABASE=ecommerce
+DB_DATABASE=emilio
 DB_HOST=mysql-30738-0.cloudclusters.net
 DB_PORT=30738
 DIALECT=mysql
